# treinamento_django

./: README.md  pyproject.toml
estacionamento/: settings.py  urls.py
estacionamento/base/: admin.py  models.py  urls.py  views.py
estacionamento/base/migrations/: 0001_initial.py  0002_alter_movimentacao_entrada_alter_movimentacao_saida_and_more.py
estacionamento/base/templates/: home.html
